@@ -4,6 +4,9 @@ Changes in @NEW@:
       clone too much - if you were cloning uphill from branch /a/b to /a, 
       and a buildreq was on /a//c, conary would try to clone the buildreq
       as well (CNY-499)
+    * Fixed bug in 'r.Ant()' and 'r.JavaCompile' which caused the CLASSPATH
+      variable to get mangled.
+    * Fixed bug in 'r.ClassPath()' which caused a traceback.
 
 Changes in 1.0.19:
   o API Change:
